[package]
name = "xp-compiler"
version = "0.1.0"
authors = ["Dmitry Brook <dmitrii_bryuhanov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-compiler = { git = "https://github.com/xpdiem/move-compiler", default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[features]
default = [ "diem_coin_xdx", "test_generated" ]
diem_coin_xdx = []
test_generated = [ "move-compiler/test_generated" ]
